--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/cli-service": "^3.0.0-rc.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "bootstrap": "^4.1.2",
     "lint-staged": "^6.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
