--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@vue/cli-service": "^3.0.0-rc.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.4.0",
     "bootstrap": "^4.1.2",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "dotaconstants": "^5.36.0",
     "lint-staged": "^6.0.0",
     "node-sass": "^4.9.0",
