--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "vue-cli-service lint",
     "test": "vue-cli-service test:unit --watch",
     "coverage": "vue-cli-service test:unit --coverage",
-    "inspect": "vue-cli-service inspect"
+    "inspect": "vue-cli-service inspect",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "npm": "^6.3.0",
@@ -34,6 +35,7 @@
     "bootstrap": "^4.1.2",
     "bootstrap-vue": "^2.0.0-rc.11",
     "dotaconstants": "^5.36.0",
+    "gh-pages": "^1.2.0",
     "lint-staged": "^6.0.0",
     "nock": "^9.4.3",
     "node-sass": "^4.9.0",
