--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "guess-the-hero",
-  "short_name": "guess-the-hero",
+  "name": "Guess the Hero",
+  "short_name": "Guess the Hero",
   "icons": [
     {
       "src": "/img/icons/android-chrome-192x192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "background_color": "#0c0d10",
+  "theme_color": "#1f2934"
 }
