--- a/package.json
+++ b/package.json
@@ -13,36 +13,37 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "npm": "^6.3.0",
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.16",
+    "npm": "^6.4.0",
+    "register-service-worker": "^1.5.2",
+    "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
+    "@types/jest": "^23.3.1",
     "@types/nock": "^9.3.0",
-    "@vue/cli-plugin-babel": "^3.0.0-rc.5",
-    "@vue/cli-plugin-pwa": "^3.0.0-rc.5",
-    "@vue/cli-plugin-typescript": "^3.0.0-rc.5",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.5",
-    "@vue/cli-service": "^3.0.0-rc.5",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-pwa": "^3.0.1",
+    "@vue/cli-plugin-typescript": "^3.0.1",
+    "@vue/cli-plugin-unit-jest": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "@vue/test-utils": "^1.0.0-beta.24",
     "axios": "^0.18.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.4.0",
-    "bootstrap": "^4.1.2",
+    "babel-jest": "^23.4.2",
+    "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
-    "dotaconstants": "^5.36.0",
+    "dotaconstants": "^6.1.0",
     "gh-pages": "^1.2.0",
     "lint-staged": "^6.0.0",
-    "nock": "^9.4.3",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "ts-jest": "^23.0.0",
-    "vue-template-compiler": "^2.5.16",
+    "nock": "^9.6.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
+    "ts-jest": "^23.1.4",
+    "typescript": "^3.0.1",
+    "vue-template-compiler": "^2.5.17",
     "vuex-class": "^0.3.1"
   },
   "gitHooks": {
