--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:unit --watch",
+    "test": "vue-cli-service test:unit",
+    "test:watch": "vue-cli-service test:unit --watch",
     "coverage": "vue-cli-service test:unit --coverage",
     "inspect": "vue-cli-service inspect",
     "predeploy": "npm run build",
