--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,10 @@
 language: node_js
 node_js:
-  - "node"
+  - 'node'
 
 branches:
   only:
     - master
-
-cache:
-  directories:
-    - node_modules
 
 script:
   - npm run lint
