--- a/package.json
+++ b/package.json
@@ -14,51 +14,49 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "npm": "^6.9.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.27",
+    "dotaconstants": "^6.18.0",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.9",
-    "vue-class-component": "^6.3.2",
-    "vue-property-decorator": "^7.3.0",
-    "vue-router": "^3.0.2",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.2.1",
+    "vue-router": "^3.1.2",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.14",
-    "@types/nock": "^9.3.1",
-    "@vue/cli-plugin-babel": "^3.5.1",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-plugin-typescript": "^3.5.1",
-    "@vue/cli-plugin-unit-jest": "^3.5.1",
-    "@vue/cli-service": "^3.5.1",
+    "@types/jest": "^24.0.17",
+    "@types/nock": "^10.0.3",
+    "@vue/cli-plugin-babel": "^3.10.0",
+    "@vue/cli-plugin-eslint": "^3.10.0",
+    "@vue/cli-plugin-pwa": "^3.10.0",
+    "@vue/cli-plugin-typescript": "^3.10.0",
+    "@vue/cli-plugin-unit-jest": "^3.10.0",
+    "@vue/cli-service": "^3.10.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "axios": "^0.18.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.14",
-    "dotaconstants": "^6.16.0",
-    "gh-pages": "^1.2.0",
-    "lint-staged": "^6.0.0",
-    "nock": "^9.6.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.2",
+    "eslint": "^6.1.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.3",
+    "gh-pages": "^2.1.1",
+    "husky": "^3.0.3",
+    "jest-watch-typeahead": "^0.3.1",
+    "lint-staged": "^9.2.1",
+    "nock": "^10.0.6",
     "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "ts-jest": "^23.10.5",
+    "prettier": "^1.18.2",
+    "sass-loader": "^7.2.0",
+    "ts-jest": "^24.0.2",
     "typescript": "^3.3.3333",
-    "vue-template-compiler": "^2.6.9",
+    "vue-template-compiler": "^2.6.10",
     "vuex-class": "^0.3.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "vue-cli-service lint",
-      "git add"
-    ],
-    "*.vue": [
-      "vue-cli-service lint",
-      "git add"
-    ]
   },
   "homepage": "https://dricholm.github.io/guess-the-hero"
 }
