[npm] Update packages
- Add Snapfire, Void Spirit
- Update packages
- Additional refactors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "lib": ["es2017", "dom", "dom.iterable", "scripthost"]
+    "lib": ["es2017", "dom", "dom.iterable", "scripthost"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts",
