--- a/package.json
+++ b/package.json
@@ -9,52 +9,49 @@
     "test": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch",
     "coverage": "vue-cli-service test:unit --coverage",
-    "inspect": "vue-cli-service inspect",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "inspect": "vue-cli-service inspect"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.1.0",
-    "dotaconstants": "^6.22.0",
+    "bootstrap-vue": "^2.5.0",
+    "dotaconstants": "^6.31.0",
     "register-service-worker": "^1.6.2",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.1.0",
-    "vue-property-decorator": "^8.3.0",
-    "vue-router": "^3.1.3",
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
+    "vue-property-decorator": "^8.4.0",
+    "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.23",
+    "@types/jest": "^25.1.3",
     "@types/nock": "^11.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.9.0",
-    "@typescript-eslint/parser": "^2.9.0",
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-eslint": "^4.1.1",
-    "@vue/cli-plugin-pwa": "^4.1.1",
-    "@vue/cli-plugin-typescript": "^4.1.1",
-    "@vue/cli-plugin-unit-jest": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "@vue/cli-plugin-babel": "^4.2.2",
+    "@vue/cli-plugin-eslint": "^4.2.2",
+    "@vue/cli-plugin-pwa": "^4.2.2",
+    "@vue/cli-plugin-typescript": "^4.2.2",
+    "@vue/cli-plugin-unit-jest": "^4.2.2",
+    "@vue/cli-service": "^4.2.2",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/test-utils": "^1.0.0-beta.31",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.7.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.0.1",
-    "gh-pages": "^2.1.1",
-    "husky": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.1",
+    "husky": "^4.2.3",
     "jest-watch-typeahead": "^0.4.2",
-    "lint-staged": "^9.5.0",
-    "nock": "^11.7.0",
-    "node-sass": "^4.13.0",
+    "lint-staged": "^10.0.7",
+    "nock": "^12.0.1",
+    "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2",
-    "vue-template-compiler": "^2.6.10",
+    "sass-loader": "^8.0.2",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.2",
+    "vue-template-compiler": "^2.6.11",
     "vuex-class": "^0.3.2"
   },
   "gitHooks": {
