--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: node_js
 node_js:
-  # FIXME: Use Node <11.11 for Jest compatibility
-  # See: https://github.com/facebook/jest/issues/8069
-  #  - 'node'
-  - '11.10.1'
+  - 'node'
 
 branches:
   only:
