--- a/package.json
+++ b/package.json
@@ -12,46 +12,46 @@
     "inspect": "vue-cli-service inspect"
   },
   "dependencies": {
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.10.0",
-    "dotaconstants": "^6.32.0",
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
+    "dotaconstants": "^6.38.0",
     "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^9.0.0",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^26.0.13",
     "@types/nock": "^11.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.26.0",
-    "@typescript-eslint/parser": "^2.26.0",
-    "@vue/cli-plugin-babel": "^4.2.3",
-    "@vue/cli-plugin-eslint": "^4.2.3",
-    "@vue/cli-plugin-pwa": "^4.2.3",
-    "@vue/cli-plugin-typescript": "^4.2.3",
-    "@vue/cli-plugin-unit-jest": "^4.2.3",
-    "@vue/cli-service": "^4.2.3",
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "@vue/cli-plugin-babel": "^4.5.4",
+    "@vue/cli-plugin-eslint": "^4.5.4",
+    "@vue/cli-plugin-pwa": "^4.5.4",
+    "@vue/cli-plugin-typescript": "^4.5.4",
+    "@vue/cli-plugin-unit-jest": "^4.5.4",
+    "@vue/cli-service": "^4.5.4",
     "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "@vue/test-utils": "^1.0.0-beta.32",
+    "@vue/eslint-config-typescript": "^5.1.0",
+    "@vue/test-utils": "^1.0.5",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint": "^7.8.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
-    "husky": "^4.2.3",
-    "jest-watch-typeahead": "^0.5.0",
-    "lint-staged": "^10.1.1",
-    "nock": "^12.0.3",
-    "node-sass": "^4.13.1",
-    "prettier": "^2.0.2",
-    "sass-loader": "^8.0.2",
-    "ts-jest": "^25.3.0",
-    "typescript": "^3.8.3",
-    "vue-template-compiler": "^2.6.11",
+    "husky": "^4.2.5",
+    "jest-watch-typeahead": "^0.6.1",
+    "lint-staged": "^10.3.0",
+    "nock": "^13.0.4",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.1.1",
+    "sass-loader": "^10.0.2",
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2",
+    "vue-template-compiler": "^2.6.12",
     "vuex-class": "^0.3.2"
   },
   "gitHooks": {
