--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -12,6 +12,7 @@ jobs:
   build:
     name: Lint, test and build
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
       - name: Checkout project
