--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -39,8 +39,45 @@ jobs:
         run: npm run build
       - name: Report coverage
         uses: codecov/codecov-action@v1
+
+  e2e:
+    name: Run E2E tests
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run Cypress
+        uses: cypress-io/github-action@v2
+        with:
+          start: npm start
+          wait-on: http://localhost:8080
+
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    needs: [build, e2e]
+    if: "contains(github.event.head_commit.message, '[deploy]') && github.event_name == 'push' && github.ref == 'refs/heads/master'"
+
+    steps:
+      - name: Checkout project
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+      - uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm ci
+      - name: Build website
+        run: npm run build
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
