--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -58,7 +58,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     needs: [build, e2e]
-    if: "contains(github.event.head_commit.message, '[deploy]') && github.event_name == 'push' && github.ref == 'refs/heads/master'"
+    environment: github-pages
+    if: "github.event_name == 'push' && github.ref == 'refs/heads/master'"
 
     steps:
       - name: Checkout project
