--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
+    "vue-meta": "^2.4.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
