--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -78,6 +78,8 @@ jobs:
         run: npm ci
       - name: Build website
         run: npm run build
+      - name: Create 404.html
+        run: cp ./dist/index.html ./dist/404.html
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
