--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "coverage": "vue-cli-service test:unit --coverage",
     "inspect": "vue-cli-service inspect",
     "e2e": "cypress run",
-    "e2e:open": "cypress open"
+    "e2e:open": "cypress open",
+    "sitemap": "vue-cli-service sitemap"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -57,6 +58,7 @@
     "sass-loader": "^10.1.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4",
+    "vue-cli-plugin-sitemap": "^2.3.0",
     "vue-template-compiler": "^2.6.12",
     "vuex-class": "^0.3.2"
   },
