--- a/package.json
+++ b/package.json
@@ -13,58 +13,58 @@
     "prepare": "husky install",
     "e2e": "cypress run",
     "e2e:open": "cypress open",
-    "storybook": "start-storybook -s public",
-    "build-storybook": "build-storybook -s public"
+    "storybook": "start-storybook",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "classnames": "2.3.1",
     "dotaconstants": "7.7.0",
-    "next": "11.1.2",
+    "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.3.8",
-    "@storybook/addon-essentials": "6.3.8",
-    "@storybook/addon-links": "6.3.8",
-    "@storybook/builder-webpack5": "6.3.8",
-    "@storybook/manager-webpack5": "6.3.8",
+    "@storybook/addon-actions": "6.4.9",
+    "@storybook/addon-essentials": "6.4.9",
+    "@storybook/addon-links": "6.4.9",
+    "@storybook/builder-webpack5": "6.4.9",
+    "@storybook/manager-webpack5": "6.4.9",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.3.8",
-    "@testing-library/cypress": "8.0.1",
-    "@testing-library/jest-dom": "5.14.1",
-    "@testing-library/react": "12.1.0",
+    "@storybook/react": "6.4.9",
+    "@testing-library/cypress": "8.0.2",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "13.2.1",
-    "@types/jest": "27.0.1",
-    "@types/react": "17.0.20",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.31.0",
-    "@typescript-eslint/parser": "4.31.0",
-    "css-loader": "6.2.0",
-    "cypress": "8.3.1",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/jest": "27.0.3",
+    "@types/react": "17.0.37",
+    "@types/react-dom": "17.0.11",
+    "@typescript-eslint/eslint-plugin": "5.7.0",
+    "@typescript-eslint/parser": "5.7.0",
+    "css-loader": "6.5.1",
+    "cypress": "9.1.1",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-cypress": "2.11.3",
-    "eslint-plugin-react": "7.25.1",
-    "eslint-plugin-typescript-sort-keys": "1.8.0",
-    "husky": "7.0.2",
+    "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.1.1",
-    "jest-watch-typeahead": "0.6.4",
-    "lint-staged": "11.1.2",
-    "next-sitemap": "1.6.168",
-    "prettier": "2.4.0",
-    "sass": "1.39.2",
-    "sass-loader": "12.1.0",
-    "storybook-addon-next-router": "3.0.8",
-    "style-loader": "3.2.1",
-    "stylelint": "13.13.1",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-sass-guidelines": "8.0.0",
-    "ts-jest": "27.0.5",
-    "tsconfig-paths-webpack-plugin": "3.5.1",
-    "typescript": "4.4.3"
+    "jest": "27.4.5",
+    "jest-watch-typeahead": "1.0.0",
+    "lint-staged": "12.1.3",
+    "next-sitemap": "1.6.203",
+    "prettier": "2.5.1",
+    "sass": "1.45.0",
+    "sass-loader": "12.4.0",
+    "storybook-addon-next-router": "3.1.0",
+    "style-loader": "3.3.1",
+    "stylelint": "14.1.0",
+    "stylelint-config-prettier": "9.0.3",
+    "stylelint-config-sass-guidelines": "9.0.1",
+    "ts-jest": "27.1.2",
+    "tsconfig-paths-webpack-plugin": "3.5.2",
+    "typescript": "4.5.4"
   }
 }
