--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "postbuild": "next-sitemap --config next.sitemap.js",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "coverage": "jest --coverage",
     "prepare": "husky install",
     "e2e": "cypress run",
@@ -18,8 +19,8 @@
   },
   "dependencies": {
     "classnames": "2.3.1",
-    "dotaconstants": "7.7.0",
-    "next": "12.0.7",
+    "dotaconstants": "7.10.0",
+    "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -48,6 +49,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-storybook": "0.5.7",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "husky": "7.0.4",
     "identity-obj-proxy": "3.0.0",
