--- a/package.json
+++ b/package.json
@@ -18,55 +18,55 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "classnames": "2.3.1",
-    "dotaconstants": "7.10.0",
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "clsx": "1.2.1",
+    "dotaconstants": "7.13.0",
+    "next": "12.2.5",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.4.9",
-    "@storybook/addon-essentials": "6.4.9",
-    "@storybook/addon-links": "6.4.9",
-    "@storybook/builder-webpack5": "6.4.9",
-    "@storybook/manager-webpack5": "6.4.9",
+    "@storybook/addon-actions": "6.5.10",
+    "@storybook/addon-essentials": "6.5.10",
+    "@storybook/addon-links": "6.5.10",
+    "@storybook/builder-webpack5": "6.5.10",
+    "@storybook/manager-webpack5": "6.5.10",
     "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.4.9",
-    "@testing-library/cypress": "8.0.2",
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.0.3",
-    "@types/react": "17.0.37",
-    "@types/react-dom": "17.0.11",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "css-loader": "6.5.1",
-    "cypress": "9.1.1",
-    "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-prettier": "8.3.0",
+    "@storybook/react": "6.5.10",
+    "@testing-library/cypress": "8.0.3",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "28.1.8",
+    "@types/react": "18.0.17",
+    "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "5.34.0",
+    "@typescript-eslint/parser": "5.34.0",
+    "css-loader": "6.7.1",
+    "cypress": "10.6.0",
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5",
+    "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-react": "7.27.1",
-    "eslint-plugin-storybook": "0.5.7",
+    "eslint-plugin-react": "7.30.1",
+    "eslint-plugin-storybook": "0.6.4",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
-    "husky": "7.0.4",
+    "husky": "8.0.1",
     "identity-obj-proxy": "3.0.0",
-    "jest": "27.4.5",
-    "jest-watch-typeahead": "1.0.0",
-    "lint-staged": "12.1.3",
-    "next-sitemap": "1.6.203",
-    "prettier": "2.5.1",
-    "sass": "1.45.0",
-    "sass-loader": "12.4.0",
-    "storybook-addon-next-router": "3.1.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "jest-watch-typeahead": "2.0.0",
+    "lint-staged": "13.0.3",
+    "next-sitemap": "3.1.21",
+    "prettier": "2.7.1",
+    "sass": "1.54.5",
+    "sass-loader": "13.0.2",
+    "storybook-addon-next-router": "4.0.0",
     "style-loader": "3.3.1",
-    "stylelint": "14.1.0",
+    "stylelint": "14.11.0",
     "stylelint-config-prettier": "9.0.3",
     "stylelint-config-sass-guidelines": "9.0.1",
-    "ts-jest": "27.1.2",
-    "tsconfig-paths-webpack-plugin": "3.5.2",
-    "typescript": "4.5.4"
+    "ts-jest": "28.0.8",
+    "tsconfig-paths-webpack-plugin": "4.0.0",
+    "typescript": "4.7.4"
   }
 }
