--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "strict": true,
     "target": "es5"
   },
-  "exclude": ["node_modules"],
+  "exclude": ["cypress", "node_modules", "./cypress.config.ts"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
