--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -16,13 +16,13 @@ jobs:
 
     steps:
       - name: Checkout project
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0 # Required to retrieve git history for Chromatic
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '14'
+          node-version: current
       - uses: actions/cache@v1
         with:
           path: ~/.npm
@@ -38,7 +38,7 @@ jobs:
       - name: Build website
         run: npm run build
       - name: Report coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
@@ -54,9 +54,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Run Cypress
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
           build: npm run build
           start: npm start
