--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postbuild": "next-sitemap --config next.sitemap.js",
     "start": "next start",
     "lint": "next lint",
+    "stylelint": "stylelint **/*.scss",
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
