--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -31,10 +31,10 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install dependencies
         run: npm ci
+      - name: Create mock service worker
+        run: npm run msw
       - name: Run unit tests
         run: npm run coverage
-        env:
-          CI: true
       - name: Build website
         run: npm run build
       - name: Report coverage
@@ -58,5 +58,5 @@ jobs:
       - name: Run Cypress
         uses: cypress-io/github-action@v4
         with:
-          build: npm run build
+          build: npm run msw && npm run build
           start: npm start
