--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,8 @@ yarn-error.log*
 # vercel
 .vercel
 
-# Generated sitemap
+# Generated files
+public/mockServiceWorker.js
 public/robots.txt
 public/sitemap.xml
 public/sitemap-0.xml
