--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -44,8 +44,9 @@ jobs:
         with:
           autoAcceptChanges: master
           buildScriptName: build-storybook
-          token: ${{ secrets.GITHUB_TOKEN }}
+          exitOnceUploaded: true
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
   e2e:
     name: Run E2E tests
@@ -58,5 +59,5 @@ jobs:
       - name: Run Cypress
         uses: cypress-io/github-action@v4
         with:
-          build: npm run msw && npm run build
+          build: npm run e2e:build
           start: npm start
