--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "coverage": "jest --coverage",
     "prepare": "husky install",
     "e2e": "cypress run",
+    "e2e:build": "npm run msw && npm run build",
     "e2e:open": "cypress open",
     "storybook": "start-storybook",
     "build-storybook": "build-storybook",
