--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-config-next": "13.2.3",
     "eslint-config-prettier": "8.7.0",
     "eslint-plugin-cypress": "2.12.1",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-storybook": "0.6.11",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
