Dead reckoning and dependencies update (#40)
* Update dependencies to latest

- Add new hero: Muerta.
- Update to Storybook 7 beta.
- Update to Stylelint 15.

* Update to Component Story Format 3.0

* Fix metadata for /play

- Extract client component to a new file.

* Add basic unit tests for about and items pages

- Add ESLint Jest plugin.
- Add arrow-body-style ESLint rule.

--- a/package.json
+++ b/package.json
@@ -16,72 +16,69 @@
     "e2e": "cypress run",
     "e2e:build": "npm run msw && npm run build",
     "e2e:open": "cypress open",
-    "storybook": "start-storybook",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev",
+    "build-storybook": "storybook build",
     "msw": "msw init public"
   },
   "dependencies": {
-    "@tanstack/react-query": "4.15.1",
+    "@tanstack/react-query": "4.26.1",
     "clsx": "1.2.1",
-    "dotaconstants": "7.13.0",
-    "next": "13.0.3",
+    "dotaconstants": "7.15.0",
+    "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "6.5.13",
-    "@storybook/addon-essentials": "6.5.13",
-    "@storybook/addon-links": "6.5.13",
-    "@storybook/builder-webpack5": "6.5.13",
-    "@storybook/manager-webpack5": "6.5.13",
-    "@storybook/preset-scss": "1.0.3",
-    "@storybook/react": "6.5.13",
-    "@tanstack/react-query-devtools": "4.16.0",
-    "@testing-library/cypress": "8.0.3",
+    "@storybook/addon-actions": "7.0.0-beta.62",
+    "@storybook/addon-essentials": "7.0.0-beta.62",
+    "@storybook/addon-links": "7.0.0-beta.62",
+    "@storybook/nextjs": "^7.0.0-beta.62",
+    "@storybook/react": "7.0.0-beta.62",
+    "@tanstack/react-query-devtools": "4.26.1",
+    "@testing-library/cypress": "9.0.0",
     "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
+    "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.2.2",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
-    "@typescript-eslint/eslint-plugin": "5.42.1",
-    "@typescript-eslint/parser": "5.42.1",
-    "css-loader": "6.7.1",
-    "cypress": "11.0.1",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "eslint-config-prettier": "8.5.0",
+    "@types/jest": "29.4.0",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
+    "@typescript-eslint/eslint-plugin": "5.54.1",
+    "@typescript-eslint/parser": "5.54.1",
+    "css-loader": "6.7.3",
+    "cypress": "12.7.0",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
+    "eslint-config-prettier": "8.7.0",
     "eslint-plugin-cypress": "2.12.1",
-    "eslint-plugin-react": "7.31.10",
-    "eslint-plugin-storybook": "0.6.7",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-storybook": "0.6.11",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
-    "husky": "8.0.2",
+    "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.3.1",
-    "jest-environment-jsdom": "29.3.1",
-    "jest-watch-typeahead": "2.2.0",
-    "lint-staged": "13.0.3",
-    "msw": "0.48.2",
-    "msw-storybook-addon": "1.6.3",
-    "next-sitemap": "3.1.31",
-    "prettier": "2.7.1",
-    "sass": "1.56.1",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-watch-typeahead": "2.2.2",
+    "lint-staged": "13.1.2",
+    "msw": "1.1.0",
+    "msw-storybook-addon": "1.7.0",
+    "next-sitemap": "4.0.5",
+    "prettier": "2.8.4",
+    "sass": "1.58.3",
     "sass-loader": "13.2.0",
-    "storybook-addon-next-router": "4.0.1",
+    "storybook": "^7.0.0-beta.62",
     "style-loader": "3.3.1",
-    "stylelint": "14.15.0",
-    "stylelint-config-prettier": "9.0.4",
+    "stylelint": "15.2.0",
     "stylelint-config-sass-guidelines": "9.0.1",
-    "ts-jest": "29.0.3",
-    "tsconfig-paths-webpack-plugin": "4.0.0",
-    "typescript": "4.8.4"
+    "ts-jest": "29.0.5",
+    "typescript": "4.9.5"
   },
   "overrides": {
-    "@testing-library/cypress": {
-      "cypress": "$cypress"
+    "msw-storybook-addon": {
+      "msw": "$msw"
     },
-    "storybook-addon-next-router": {
-      "next": "$next"
+    "stylelint-config-sass-guidelines": {
+      "stylelint": "$stylelint"
     }
   },
   "msw": {
