--- a/package.json
+++ b/package.json
@@ -21,57 +21,57 @@
     "msw": "msw init public"
   },
   "dependencies": {
-    "@tanstack/react-query": "4.26.1",
+    "@tanstack/react-query": "4.28.0",
     "clsx": "1.2.1",
     "dotaconstants": "7.15.0",
-    "next": "13.2.3",
+    "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.0.0-beta.62",
-    "@storybook/addon-essentials": "7.0.0-beta.62",
-    "@storybook/addon-links": "7.0.0-beta.62",
-    "@storybook/nextjs": "^7.0.0-beta.62",
-    "@storybook/react": "7.0.0-beta.62",
-    "@tanstack/react-query-devtools": "4.26.1",
+    "@storybook/addon-actions": "7.0.2",
+    "@storybook/addon-essentials": "7.0.2",
+    "@storybook/addon-links": "7.0.2",
+    "@storybook/nextjs": "^7.0.2",
+    "@storybook/react": "7.0.2",
+    "@tanstack/react-query-devtools": "4.29.0",
     "@testing-library/cypress": "9.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.4.0",
-    "@types/react": "18.0.28",
+    "@types/jest": "29.5.0",
+    "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.54.1",
-    "@typescript-eslint/parser": "5.54.1",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
     "css-loader": "6.7.3",
-    "cypress": "12.7.0",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "eslint-config-prettier": "8.7.0",
-    "eslint-plugin-cypress": "2.12.1",
+    "cypress": "12.9.0",
+    "eslint": "8.37.0",
+    "eslint-config-next": "13.3.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-plugin-cypress": "2.13.2",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-storybook": "0.6.11",
-    "eslint-plugin-typescript-sort-keys": "2.1.0",
+    "eslint-plugin-typescript-sort-keys": "2.3.0",
     "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-watch-typeahead": "2.2.2",
-    "lint-staged": "13.1.2",
-    "msw": "1.1.0",
+    "lint-staged": "13.2.0",
+    "msw": "1.2.1",
     "msw-storybook-addon": "1.8.0",
-    "next-sitemap": "4.0.5",
-    "prettier": "2.8.4",
-    "sass": "1.58.3",
-    "sass-loader": "13.2.0",
-    "storybook": "^7.0.0-beta.62",
-    "style-loader": "3.3.1",
-    "stylelint": "15.2.0",
+    "next-sitemap": "4.0.6",
+    "prettier": "2.8.7",
+    "sass": "1.61.0",
+    "sass-loader": "13.2.2",
+    "storybook": "^7.0.2",
+    "style-loader": "3.3.2",
+    "stylelint": "15.4.0",
     "stylelint-config-sass-guidelines": "10.0.0",
-    "ts-jest": "29.0.5",
-    "typescript": "4.9.5"
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.3"
   },
   "msw": {
     "workerDirectory": "public"
