--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "msw": "msw init public"
   },
   "dependencies": {
-    "@tanstack/react-query": "4.28.0",
+    "@tanstack/react-query": "4.29.2",
     "clsx": "1.2.1",
     "dotaconstants": "7.15.0",
     "next": "13.3.0",
@@ -29,28 +29,28 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.0.2",
-    "@storybook/addon-essentials": "7.0.2",
-    "@storybook/addon-links": "7.0.2",
-    "@storybook/nextjs": "^7.0.2",
-    "@storybook/react": "7.0.2",
-    "@tanstack/react-query-devtools": "4.29.0",
+    "@storybook/addon-actions": "7.0.5",
+    "@storybook/addon-essentials": "7.0.5",
+    "@storybook/addon-links": "7.0.5",
+    "@storybook/nextjs": "7.0.5",
+    "@storybook/react": "7.0.5",
+    "@tanstack/react-query-devtools": "4.29.2",
     "@testing-library/cypress": "9.0.0",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.5.0",
-    "@types/react": "18.0.33",
+    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.57.1",
-    "@typescript-eslint/parser": "5.57.1",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "css-loader": "6.7.3",
     "cypress": "12.9.0",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-cypress": "2.13.2",
-    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jest": "27.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-storybook": "0.6.11",
     "eslint-plugin-typescript-sort-keys": "2.3.0",
@@ -59,19 +59,19 @@
     "jest": "29.5.0",
     "jest-environment-jsdom": "29.5.0",
     "jest-watch-typeahead": "2.2.2",
-    "lint-staged": "13.2.0",
+    "lint-staged": "13.2.1",
     "msw": "1.2.1",
     "msw-storybook-addon": "1.8.0",
-    "next-sitemap": "4.0.6",
+    "next-sitemap": "4.0.7",
     "prettier": "2.8.7",
-    "sass": "1.61.0",
+    "sass": "1.62.0",
     "sass-loader": "13.2.2",
-    "storybook": "^7.0.2",
+    "storybook": "7.0.5",
     "style-loader": "3.3.2",
     "stylelint": "15.4.0",
     "stylelint-config-sass-guidelines": "10.0.0",
     "ts-jest": "29.1.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.4"
   },
   "msw": {
     "workerDirectory": "public"
