--- a/package.json
+++ b/package.json
@@ -21,57 +21,58 @@
     "msw": "msw init public"
   },
   "dependencies": {
-    "@tanstack/react-query": "4.29.5",
-    "clsx": "1.2.1",
-    "dotaconstants": "7.16.0",
-    "next": "13.4.1",
+    "@tanstack/react-query": "5.15.5",
+    "@vercel/speed-insights": "1.0.2",
+    "clsx": "2.1.0",
+    "dotaconstants": "7.20.0",
+    "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.0.9",
-    "@storybook/addon-essentials": "7.0.9",
-    "@storybook/addon-links": "7.0.9",
-    "@storybook/nextjs": "7.0.9",
-    "@storybook/react": "7.0.9",
-    "@tanstack/react-query-devtools": "4.29.6",
-    "@testing-library/cypress": "9.0.0",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "14.0.0",
-    "@testing-library/user-event": "14.4.3",
-    "@types/jest": "29.5.1",
-    "@types/react": "18.2.5",
-    "@types/react-dom": "18.2.4",
-    "@typescript-eslint/eslint-plugin": "5.59.2",
-    "@typescript-eslint/parser": "5.59.2",
-    "css-loader": "6.7.3",
-    "cypress": "12.11.0",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-cypress": "2.13.3",
-    "eslint-plugin-jest": "27.2.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-storybook": "0.6.12",
-    "eslint-plugin-typescript-sort-keys": "2.3.0",
+    "@storybook/addon-actions": "7.6.6",
+    "@storybook/addon-essentials": "7.6.6",
+    "@storybook/addon-links": "7.6.6",
+    "@storybook/nextjs": "7.6.6",
+    "@storybook/react": "7.6.6",
+    "@tanstack/react-query-devtools": "5.15.5",
+    "@testing-library/cypress": "10.0.1",
+    "@testing-library/jest-dom": "6.1.6",
+    "@testing-library/react": "14.1.2",
+    "@testing-library/user-event": "14.5.2",
+    "@types/jest": "29.5.11",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
+    "css-loader": "6.8.1",
+    "cypress": "13.6.2",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-cypress": "2.15.1",
+    "eslint-plugin-jest": "27.6.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-storybook": "0.6.15",
+    "eslint-plugin-typescript-sort-keys": "3.1.0",
     "husky": "8.0.3",
     "identity-obj-proxy": "3.0.0",
-    "jest": "29.5.0",
-    "jest-environment-jsdom": "29.5.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "jest-watch-typeahead": "2.2.2",
-    "lint-staged": "13.2.2",
-    "msw": "1.2.1",
-    "msw-storybook-addon": "1.8.0",
-    "next-sitemap": "4.0.9",
-    "prettier": "2.8.8",
-    "sass": "1.62.1",
-    "sass-loader": "13.2.2",
-    "storybook": "7.0.9",
-    "style-loader": "3.3.2",
-    "stylelint": "15.6.1",
+    "lint-staged": "15.2.0",
+    "msw": "2.0.11",
+    "msw-storybook-addon": "2.0.0--canary.122.06f0c92.0",
+    "next-sitemap": "4.2.3",
+    "prettier": "3.1.1",
+    "sass": "1.69.6",
+    "sass-loader": "13.3.3",
+    "storybook": "7.6.6",
+    "style-loader": "3.3.3",
+    "stylelint": "15.11.0",
     "stylelint-config-sass-guidelines": "10.0.0",
-    "ts-jest": "29.1.0",
-    "typescript": "5.0.4"
+    "ts-jest": "29.1.1",
+    "typescript": "5.2.2"
   },
   "msw": {
     "workerDirectory": "public"
