chore: Update Storybook

--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "8.3.5",
-    "@storybook/addon-essentials": "8.3.5",
-    "@storybook/addon-links": "8.3.5",
-    "@storybook/nextjs": "8.3.5",
-    "@storybook/react": "8.3.5",
+    "@chromatic-com/storybook": "^3.2.4",
+    "@storybook/addon-actions": "^8.5.8",
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/addon-links": "^8.5.8",
+    "@storybook/nextjs": "^8.5.8",
+    "@storybook/react": "^8.5.8",
     "@tanstack/react-query-devtools": "5.59.0",
     "@testing-library/cypress": "10.0.2",
     "@testing-library/jest-dom": "6.5.0",
@@ -54,7 +55,7 @@
     "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-jest": "28.8.3",
     "eslint-plugin-react": "7.37.1",
-    "eslint-plugin-storybook": "0.9.0",
+    "eslint-plugin-storybook": "^0.11.3",
     "eslint-plugin-typescript-sort-keys": "3.3.0",
     "husky": "9.1.6",
     "identity-obj-proxy": "3.0.0",
@@ -63,12 +64,12 @@
     "jest-watch-typeahead": "2.2.2",
     "lint-staged": "15.2.10",
     "msw": "2.4.9",
-    "msw-storybook-addon": "2.0.3",
+    "msw-storybook-addon": "^2.0.4",
     "next-sitemap": "4.2.3",
     "prettier": "3.3.3",
     "sass": "1.79.4",
     "sass-loader": "16.0.2",
-    "storybook": "8.3.5",
+    "storybook": "^8.5.8",
     "style-loader": "4.0.0",
     "stylelint": "16.9.0",
     "stylelint-config-sass-guidelines": "12.1.0",
