--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Report coverage
         uses: codecov/codecov-action@v3
       - name: Publish to Chromatic
-        uses: chromaui/action@v1
+        uses: chromaui/action@latest
         with:
           autoAcceptChanges: master
           buildScriptName: build-storybook
