feat: Update for 7.38 (#56)
* feat: Update for 7.38

* chore: Pin versions and run audit

* ci: Update Chromatic action version

* chore: Use import tye

* ci: Update action versions

* chore: Update Next.js

* chore: Update import type

* fix: Add param

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "postbuild": "next-sitemap --config next.sitemap.js",
     "start": "next start",
@@ -24,38 +24,38 @@
     "@tanstack/react-query": "5.59.0",
     "@vercel/speed-insights": "1.0.12",
     "clsx": "2.1.1",
-    "dotaconstants": "8.13.0",
-    "next": "14.2.22",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "dotaconstants": "9.4.0",
+    "next": "15.1.7",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@storybook/addon-actions": "^8.5.8",
-    "@storybook/addon-essentials": "^8.5.8",
-    "@storybook/addon-links": "^8.5.8",
-    "@storybook/nextjs": "^8.5.8",
-    "@storybook/react": "^8.5.8",
+    "@chromatic-com/storybook": "3.2.4",
+    "@storybook/addon-actions": "8.5.8",
+    "@storybook/addon-essentials": "8.5.8",
+    "@storybook/addon-links": "8.5.8",
+    "@storybook/nextjs": "8.5.8",
+    "@storybook/react": "8.5.8",
     "@tanstack/react-query-devtools": "5.59.0",
     "@testing-library/cypress": "10.0.2",
     "@testing-library/jest-dom": "6.5.0",
-    "@testing-library/react": "16.0.1",
+    "@testing-library/react": "16.2.0",
     "@testing-library/user-event": "14.5.2",
     "@types/css-modules": "1.0.5",
     "@types/jest": "29.5.13",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
     "@typescript-eslint/eslint-plugin": "8.8.0",
     "@typescript-eslint/parser": "8.8.0",
     "css-loader": "7.1.2",
     "cypress": "13.15.0",
     "eslint": "8.57.1",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "15.1.7",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-jest": "28.8.3",
     "eslint-plugin-react": "7.37.1",
-    "eslint-plugin-storybook": "^0.11.3",
+    "eslint-plugin-storybook": "0.11.3",
     "eslint-plugin-typescript-sort-keys": "3.3.0",
     "husky": "9.1.6",
     "identity-obj-proxy": "3.0.0",
@@ -64,12 +64,12 @@
     "jest-watch-typeahead": "2.2.2",
     "lint-staged": "15.2.10",
     "msw": "2.4.9",
-    "msw-storybook-addon": "^2.0.4",
+    "msw-storybook-addon": "2.0.4",
     "next-sitemap": "4.2.3",
     "prettier": "3.3.3",
     "sass": "1.79.4",
     "sass-loader": "16.0.2",
-    "storybook": "^8.5.8",
+    "storybook": "8.5.8",
     "style-loader": "4.0.0",
     "stylelint": "16.9.0",
     "stylelint-config-sass-guidelines": "12.1.0",
@@ -81,5 +81,9 @@
     "workerDirectory": [
       "public"
     ]
+  },
+  "overrides": {
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4"
   }
 }
